--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/telescope": "^4.14",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "sentry/sentry-laravel": "^3.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
