--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-dom": "*",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8",
-        "ext-dom": "*"
+        "laravel/telescope": "^4.15",
+        "laravel/tinker": "^2.8"
     },
     "require-dev": {
         "deployer/deployer": "^7.3",
